pkg/plugins/policies/meshtimeout/plugin/testdata/real-MeshService-targeted-to-real-MeshService.gateway.route.golden.yaml
ignorePortInHostMatching: true
name: sample-gateway:HTTP:8080:*
requestHeadersToRemove:
- x-kuma-tags
validateClusters: false
virtualHosts:
- domains:
  - '*'
  name: '*'
  routes:
  - match:
      path: /
    name: JNNc6//C3P17nUsOJm5f4kqG+U3v8pXhS0od9C3+oss=
    route:
      clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
      idleTimeout: 5s
      timeout: 15s
      weightedClusters:
        clusters:
        - name: default_backend___msvc_80-01804e3659fbd290
          requestHeadersToAdd:
          - header:
              key: x-kuma-tags
              value: '&kuma.io/service=sample-gateway&'
          weight: 100
